cluster/apealive/traefik/config/ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: sys
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: HostRegexp(`traefik.apealive.{tld:(net|local)}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    services:
    - kind: TraefikService
      name: api@internal
  tls:
    certResolver: cloudflare
    domains:
    - main: apealive.net
      sans:
      - traefik.apealive.net
